fix(CSS): Fix styling of file upload forms on mobile

--- a/manager/manager/static/sass/styles.scss
+++ b/manager/manager/static/sass/styles.scss
@@ -189,6 +189,31 @@ body {
     }
   }
 
+  .field.has-addons-tablet .file-label {
+    flex-wrap: wrap;
+    width: 100%;
+
+    & > * {
+      flex-grow: 1;
+      max-width: none;
+    }
+
+    .file-cta {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      flex-basis: 100%;
+    }
+
+    .file-name {
+      border-top: none;
+      border-radius: 0;
+      border-left: 1px solid $grey-lighter;
+      border-right: 1px solid $grey-lighter;
+    }
+  }
+
   .is-expanded-mobile {
     flex-grow: 1;
 
@@ -380,6 +405,16 @@ body {
   // Align individual user role select dropdown to the role dropdown in the user search bar
   .user-role-select {
     min-width: 9.75rem;
+  }
+}
+
+
+.field.has-addons-tablet .control {
+  &:not(:last-of-type) {
+    .file.has-name .file-name {
+      border-bottom-right-radius: 0;
+      border-top-right-radius: 0;
+    }
   }
 }
 
